--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   simple_animations: ^5.0.0+2
   sqflite: ^2.1.0+1
   mongo_dart: ^0.8.1
+  event: ^2.1.2
 
 dev_dependencies:
   flutter_test:
